--- a/chapter_01.qmd
+++ b/chapter_01.qmd
@@ -10,7 +10,7 @@ css:
   - ":root { --my-color: #4d00ff; }"  
 ---
 
-\newcommand{\kgcol}{\textcolor{var(--my-color)}} 
+\newcommand{\kgnote}{\textcolor{var(--my-color)}} 
 
 ```{r}
 #| warning: false
